--- a/Trabalho1/docs/template.tex
+++ b/Trabalho1/docs/template.tex
@@ -23,7 +23,7 @@
 \Large{Programação em Lógica}\linebreak
 }
 
-\author{\textbf{Grupo Ploy4:}\\ Gonçalo Ribeiro - 201403877 \\ Nuno Martins - 201405079 \\\linebreak\linebreak \\
+\author{\textbf{Grupo Ploy_4:}\\ Gonçalo Ribeiro - 201403877 \\ Nuno Martins - 201405079 \\\linebreak\linebreak \\
  \\ Faculdade de Engenharia da Universidade do Porto \\ Rua Roberto Frias, s\/n, 4200-465 Porto, Portugal \linebreak\linebreak\linebreak
 \linebreak\linebreak\vspace{1cm}}
 \date{13 de Novembro de 2016}
@@ -36,9 +36,9 @@
 \newpage
 
 \section*{Resumo}
-Para o 1º Trabalho Prático, o nosso grupo implementou o jogo de tabuleiro Ploy em Prolog - linguagem de programação em lógica.
+Para o 1º Trabalho Prático, o nosso grupo implementou o jogo de tabuleiro Ploy em Prolog - uma linguagem de programação em lógica.
 O principal objectivo deste trabalho foi aplicar os conhecimentos adquiridos sobre o paradigma de programação em lógica, lecionados na unidade curricular PLOG.
-O resultado final é um versão funcional do jogo com interface de texto. Foi também implementada um inteligência artificial capaz de fazer jogadas pseudoaleatórias.
+O resultado final é um versão funcional do jogo com interface de texto. Foi também implementada um inteligência artificial capaz de fazer jogadas aleatórias ou gananciosas.
 Como considerações finais, estamos satisfeitos com o trabalho que realizámos e concordamos que foi uma experiência enriquecedora e que de certa forma colocou à prova os nossos conhecimentos de lógica e a nossa capacidade de aprender um novo paradigma de programação num espaço de tempo relativamente pequeno.
 
 %Resumo sucinto do trabalho com 150 a 250 palavras (problema abordado, objetivo, como foi o problema resolvido/abordado, principais resultados e conclusões).
@@ -63,10 +63,28 @@ O objetivo deste trabalho foi pôr em prática os conhecimentos adquiridos sobre
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{O Jogo Ploy}
+Ploy é um jogo de tabuleiro para 2 ou 4 jogadores. Neste trabalho apenas nos focámos na versão de 2 jogadores.
+Lançado em 1970 pela a empresa Minnesota Mining and Manufacturing, o jogo consiste num tabuleiro 9 por 9 onde cada jogador tem um conjunto de 15 peças.
+O objetivo do jogo é capturar o Commander adversário (semelhante ao Rei no xadrez) ou então todas as peças menos o Commander. A captura de peças efectua-se da mesma maneira que no xadrez - movendo-se um peça para uma casa ocupada por uma peça adversária. Em cada turno, o jogador pode escolher uma peça para jogar. Uma jogada consiste em rodar a peça escolhida (45º para qualquer sentido) ou então mover a peça numa das direções para qual ela aponta. O número de casas é mover é determinado pelo tipo de peça.
 
-Descrever sucintamente o jogo, a sua história e, principalmente, as suas regras. Devem ser incluídas imagens apropriadas para explicar o funcionamento do jogo. (Pode ser idêntico ao texto do relatório intercalar.)
+Cada conjunto de peças contem:
+\begin{table}[]
+\centering
+\label{Conjunto de peças de cada jogador.}
+\begin{tabular}{lllll}
+                   Shields(*) Probes  Lances  Commander \\
+Quantidade         3          5       6       1         \\
+Casas a mover      1          2       3       1         \\
+Direções apontadas 1          2       3       4         \\
+\end{tabular}
+\caption{(*) Os Shields são as únicas peças que podem ser rodadas e movidas na mesma jogada.}
+\end{table}
 
-
+\begin{figure}[h]
+\caption{Estado inicial do jogo.}
+\centering
+\includegraphics[width=0.8\textwidth]{ploy.gif}
+\end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Lógica do Jogo}
 
@@ -95,7 +113,12 @@ Descrever o módulo de interface com o utilizador em modo de texto.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Conclusões}
-Que conclui deste projecto? Como poderia melhorar o trabalho desenvolvido?
+Como considerações finais, estamos satisfeitos com o trabalho que realizámos e concordamos que foi uma experiência enriquecedora e que de certa forma colocou à prova os nossos conhecimentos de lógica e a nossa capacidade de aprender um novo paradigma de programação num espaço de tempo curto.
+Não nos deparamos com nenhuma dificuldade concreta durante a implementação do jogo. No entanto, esta foi relativamente lenta e laborosa, visto que estavamos activamente a aprender Polog enquanto faziamos o projecto, o que implicou uma constante consulta de documentação e uma abordagem "trial by error" de programação.
+Ambos concordamos que deviamos ter começado a elaboração do relatório mais cedo, em vez de o deixarmos para ultima prioridade. Assim teríamos mais tempo para adicionar mais conteúdo e refinar o restante. Tirando isso, sentimos que conseguimos fazer tudo ao que nos propomos no início do desenvolvimento.
+Em suma, reconhecemos o potencial do Prolog como ferramenta para o ensino didatico de lógica, mas, na prespectiva de quem usa maioritariamente linguagens imperativas (C, C++, Java), é pouco funcional - não nos dá ferramentas suficientes para atacarmos diretamente um problema, é necessário criar múltiplos predicados para relizar coisas tão simples como iterar listas.
+
+%Que conclui deste projecto? Como poderia melhorar o trabalho desenvolvido?
 
 
 \clearpage
