added some stuff to report

--- a/Trabalho2/docs/template.tex
+++ b/Trabalho2/docs/template.tex
@@ -14,7 +14,7 @@
 \setlength{\textwidth}{16cm}
 \setlength{\textheight}{22cm}
 
-\title{\Huge\textbf{Ploy}\linebreak\linebreak\linebreak
+\title{\Huge\textbf{Crazy Pavement}\linebreak\linebreak\linebreak
 \Large\textbf{Relatório Final}\linebreak\linebreak
 \linebreak\linebreak
 \includegraphics[scale=0.1]{feup-logo.png}\linebreak\linebreak
@@ -23,7 +23,7 @@
 \Large{Programação em Lógica}\linebreak
 }
 
-\author{\textbf{Grupo Ploy\_4:}\\ Gonçalo Ribeiro - 201403877 \\ Nuno Martins - 201405079 \\\linebreak\linebreak \\
+\author{\textbf{Grupo Crazy Pavement\_5:}\\ Gonçalo Ribeiro - 201403877 \\ Nuno Martins - 201405079 \\\linebreak\linebreak \\
  \\ Faculdade de Engenharia da Universidade do Porto \\ Rua Roberto Frias, s\/n, 4200-465 Porto, Portugal \linebreak\linebreak\linebreak
 \linebreak\linebreak\vspace{1cm}}
 \date{13 de Novembro de 2016}
@@ -36,7 +36,7 @@
 \newpage
 
 \section*{Resumo}
-Para o 1º Trabalho Prático, o nosso grupo implementou o jogo de tabuleiro Ploy em Prolog - uma linguagem de programação em lógica.
+Para o 2º Trabalho Prático, o nosso grupo implementou uma solução para o puzzle Crazy Pavement em Prolog, uma linguagem de programação em lógica, usando restrições para encontrar uma solução.
 O principal objectivo deste trabalho foi aplicar os conhecimentos adquiridos sobre o paradigma de programação em lógica, lecionados na unidade curricular PLOG.
 
 O resultado final é um versão funcional do jogo com interface de texto. Foi também implementada um inteligência artificial capaz de fazer jogadas aleatórias ou gananciosas.
