--- a/Trabalho2/docs/artigo/typeinst.tex
+++ b/Trabalho2/docs/artigo/typeinst.tex
@@ -133,7 +133,7 @@ Cada vez que é passada uma casa cujo índice na lista de solução esteja a 1, 
 Para iniciar a aplicação, deve ser consultado o ficheiro 'crazypave.pl' e corrido o predicado \textit{crazypave} .
 Depois de executar o este predicado, serão pedidos ao utilizador as restrições a usar para as linhas, e quando todas colocadas, inserir '-1' para poder inserir as restrições de colunas.
 Depois de inseridas estas , inserir '-1' novamente para encontrar a solução.
-Alternativamente, pode-se correr os predicados \textit{test1,test2,test3} para encontrar a solução de boards e respetivas restrições já predefinidas, sendo o 1º o puzzle fornecido no Moodle.
+Alternativamente, pode-se correr os predicados \textit{test1,test2,test3,test4} para encontrar a solução de boards e respetivas restrições já predefinidas, sendo o 1º o puzzle fornecido no Moodle.
 
 A forma que solução é demonstrada pode ser visualizada na figura abaixo, onde pode ser observado o tempo necessário a encontrar a solução, estatisticas e o tabuleiro no modo texto.
 
@@ -148,21 +148,29 @@ A forma que solução é demonstrada pode ser visualizada na figura abaixo, onde
 
 \section{Resultados}
 
-Foram testados no total 6 puzzles, 1 com tamanho 7x7 e 3 com tamanho 10x10.
+Foram testados no total 4 puzzles, 1 com tamanho 7x7 e 3 com tamanho 10x10, tendo o ultimo um número superior de restrições.
 
 Os resultados que foram obtidos não são conclusivos devido tanto ao pequeno número de puzzles encontrados na internet como à pequena dimensão destes.
 
 No entanto, concluiu-se que:
 
 \begin{itemize}
-  \item Quantas mais restrições impostas, mais demora a resolver;
-  \item Quantas mais regiões, mais demora a resolver;
-  \item O tamanho do puzzle não tem influência no tempo;
+  \item Quantas mais restrições impostas, mais retrocessos ocorrem;
+  \item Quantas mais regiões, mais retrocessos ocorrem;
+  \item O tamanho do puzzle não tem influência no número de retrocessos;
 \end{itemize}
 
+Quanto ao tempo gasto, não podem ser tiradas conclusões, pois não foi encontrado nenhum puzzle que demorasse mais de 0.0001s a ser resolvido.
 
 
-\section*{Appendix: Springer-Author Discount}
+
+\section{Conclusão}
+
+Como considerações finais, estamos satisfeitos com o trabalho que realizámos e concordamos que foi uma experiência enriquecedora e que de certa forma colocou à prova os nossos conhecimentos de lógica.
+
+De momento, todos os puzzles são hardcoded. Reconhecemos que a implementação de uma funcionalidade que permitisse ao utilizador ler puzzles a partir de ficheiros sería uma melhoria conveniente, assim como a adição de um menu "how to play" para orientar novos utilizadores ao funcionamento do programa.
+
+Visto que o cerne do nosso código - o predicado que gera soluções do puzzle - foi desenvolvido numa única aula prática, reconhecemos o poder da programação com restrições lógicas na resolução deste tipo de problemas combinatórios. É de nossa opinião que a mesma implementação num paradigma de linguagem imperativo (C, Java, etc.) resultaria num tempo desenvolvimento maior e num código mais extenso e complexo.
 
 LNCS authors are entitled to a 33.3\% discount off all Springer
 publications. Before placing an order, the author should send an email, 
@@ -171,20 +179,4 @@ to \url{orders-HD-individuals@springer.com} to obtain a so-called token. This to
 number, which must be entered when placing an order via the Internet, in
 order to obtain the discount.
 
-\section{Checklist of Items to be Sent to Volume Editors}
-Here is a checklist of everything the volume editor requires from you:
-
-
-\begin{itemize}
-\settowidth{\leftmargin}{{\Large$\square$}}\advance\leftmargin\labelsep
-\itemsep8pt\relax
-\renewcommand\labelitemi{{\lower1.5pt\hbox{\Large$\square$}}}
-
-\item The final \LaTeX{} source files
-\item A final PDF file
-\item A copyright form, signed by one author on behalf of all of the
-authors of the paper.
-\item A readme giving the name and email address of the
-corresponding author.
-\end{itemize}
 \end{document}
