--- a/Trabalho2/docs/artigo/report.tex
+++ b/Trabalho2/docs/artigo/report.tex
@@ -15,7 +15,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\documentclass[runningheads,a4paper]{llncs}
+\documentclass[runningheads,a4paper,12pt]{llncs}
 
 \usepackage{amssymb}
 \setcounter{tocdepth}{3}
@@ -64,8 +64,6 @@
 O objetivo deste artigo é demonstrar a forma de como foi resolvido o problema de resolver o puzzle Crazy Pavement com o uso de restrições, no âmbito da unidade curricular de Programação em Lógica, do 3º ano do Mestrado Integrado em Engenharia Informática e Computação, na FEUP.
 \keywords{Prolog Crazy Pavement Puzzle PLR Restrictions Solver}
 \end{abstract}
-
-\newpage
 
 \section{Introdução}
 
@@ -171,12 +169,5 @@ Como considerações finais, estamos satisfeitos com o trabalho que realizámos 
 De momento, todos os puzzles são hardcoded. Reconhecemos que a implementação de uma funcionalidade que permitisse ao utilizador ler puzzles a partir de ficheiros sería uma melhoria conveniente, assim como a adição de um menu "how to play" para orientar novos utilizadores ao funcionamento do programa.
 
 Visto que o cerne do nosso código - o predicado que gera soluções do puzzle - foi desenvolvido numa única aula prática, reconhecemos o poder da programação com restrições lógicas na resolução deste tipo de problemas combinatórios. É de nossa opinião que a mesma implementação num paradigma de linguagem imperativo (C, Java, etc.) resultaria num tempo desenvolvimento maior e num código mais extenso e complexo.
-
-LNCS authors are entitled to a 33.3\% discount off all Springer
-publications. Before placing an order, the author should send an email, 
-giving full details of his or her Springer publication,
-to \url{orders-HD-individuals@springer.com} to obtain a so-called token. This token is a
-number, which must be entered when placing an order via the Internet, in
-order to obtain the discount.
 
 \end{document}
